<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coupons</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login and signup -->
    <string name="fullname">Fullname</string>
    <string name="action_username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="favorite">Favorite</string>
    <string name="popular">Popular</string>
    <string name="justForYou">Just For You</string>
    <string name="no_coupons_found">No coupons found</string>

</resources>