<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/lightBlue_lighten_3"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding" >

    <!-- Card -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_85"
        android:minHeight="@dimen/verticalSpacing_body"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/paper_card_base_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Fullname -->

            <EditText
                android:id="@+id/signup_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_85"
                android:hint="@string/fullname"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/verticalSpacing_body"
                android:padding="@dimen/card_padding"
                android:textColor="@color/black_85"
                android:textColorHighlight="@color/black_85"
                android:textColorHint="@color/black_85" />

            <!-- Email -->

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_85"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/verticalSpacing_body"
                android:padding="@dimen/card_padding"
                android:textColor="@color/black_85"
                android:textColorHighlight="@color/black_85"
                android:textColorHint="@color/black_85" />

            <!-- Password -->

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_85"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="@dimen/verticalSpacing_body"
                android:padding="@dimen/card_padding"
                android:textColor="@color/black_85"
                android:textColorHighlight="@color/black_85"
                android:textColorHint="@color/black_85" />

            <!-- Login button -->

            <Button
                android:id="@+id/signup_signup"
                style="@style/text_body1_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:clickable="true"
                android:gravity="center"
                android:minHeight="@dimen/verticalSpacing_body"
                android:text="@string/login" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_zdepth1_height"
            android:background="@color/blue_accent_1" />
    </LinearLayout>

</ScrollView>